--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section class=" ">
+<section class=" border-gray-600 border h-screen">
   <div class="px-10  py-5 ">
     <div class="flex items-center py-4">
       <hr class="flex-grow max-w-10 border-gray-500 mr-4 w-3">
