--- a/src/app/components/twitter-profile/twitter-profile.component.html
+++ b/src/app/components/twitter-profile/twitter-profile.component.html
@@ -1,106 +1,107 @@
 
-  <div class="px-6 flex items-center gap-6 ">
-    <i class="fa-solid fa-arrow-left"></i>
-    <div>
-      <h5 class="font-bold text-sm pt-2">Van Huy</h5>
-      <span class="text-gray-400 text-sm">3 posts</span>
+<div class="border-gray-600 border">
+<div class="px-6 flex items-center gap-6 ">
+  <i class="fa-solid fa-arrow-left"></i>
+  <div>
+    <h5 class="font-bold text-sm pt-2">Van Huy</h5>
+    <span class="text-gray-400 text-sm">3 posts</span>
+  </div>
+</div>
+<!-- Cover Image -->
+<div class="h-56 border-gray-400 border-b-2 px-1">
+  <img [src]="profile.coverImage" class="w-full h-full object-cover" alt="Cover" />
+</div>
+
+<!-- Profile Header -->
+<div class="px-6">
+  <div class="flex items-center gap-4 relative">
+    <img [src]="profile.profileImage" class="w-32 h-32 object-cover rounded-full border-4 border-white absolute -top-16" alt="Profile" />
+    <div class="flex gap-2 absolute right-0 top-0 mt-2">
+      <button class="w-8 h-8 border-2 border-gray-300 text-black rounded-full flex items-center justify-center hover:bg-gray-300">
+        <i class="fa-solid fa-ellipsis"></i>
+      </button>
+      <button class="w-8 h-8 border-2 border-gray-300 text-black rounded-full flex items-center justify-center hover:bg-gray-300">
+        <i class="fa-solid fa-magnifying-glass"></i>
+      </button>
+      <button class="w-8 h-8 border-2 border-gray-300 text-black rounded-full flex items-center justify-center hover:bg-gray-300">
+        <i class="fa-regular fa-envelope"></i>
+      </button>
+      <button class="w-8 h-8 border-2 border-gray-300 text-black rounded-full flex items-center justify-center hover:bg-gray-300">
+        <i class="fa-regular fa-bell"></i>
+      </button>
+      <button class="w-24 h-8 text-white bg-black rounded-full flex items-center justify-center hover:bg-gray-500">
+        <a href="">Follow</a>
+      </button>
     </div>
   </div>
-  <!-- Cover Image -->
-  <div class="h-56 bg-gray-700 border-gray-400 border-b-2">
-    <img [src]="profile.coverImage" class="w-full h-full object-cover" alt="Cover" />
-  </div>
-
-  <!-- Profile Header -->
-  <div class="px-6">
-    <div class="flex items-center gap-4 relative">
-      <img [src]="profile.profileImage" class="w-32 h-32 object-cover rounded-full border-4 border-white absolute -top-16" alt="Profile" />
-      <div class="flex gap-2 absolute right-0 top-0 mt-2">
-        <button class="w-8 h-8 border-2 border-gray-300 text-black rounded-full flex items-center justify-center hover:bg-gray-300">
-          <i class="fa-solid fa-ellipsis"></i>
-        </button>
-        <button class="w-8 h-8 border-2 border-gray-300 text-black rounded-full flex items-center justify-center hover:bg-gray-300">
-          <i class="fa-solid fa-magnifying-glass"></i>
-        </button>
-        <button class="w-8 h-8 border-2 border-gray-300 text-black rounded-full flex items-center justify-center hover:bg-gray-300">
-          <i class="fa-regular fa-envelope"></i>
-        </button>
-        <button class="w-8 h-8 border-2 border-gray-300 text-black rounded-full flex items-center justify-center hover:bg-gray-300">
-          <i class="fa-regular fa-bell"></i>
-        </button>
-        <button class="w-24 h-8 text-white bg-black rounded-full flex items-center justify-center hover:bg-gray-500">
-          <a href="">Follow</a>
-        </button>
-      </div>
-    </div>
-    <div class="pt-16">
-      <h1 class="font-bold flex items-center text-sm ">
-        {{ profile.name }}
-        <img src="assets/img-icons/tick-mark.png" alt="Verified" class="ml-2 w-4 h-4" />
-      </h1>
-      <p class="text-sm text-gray-500 mt-2">{{ profile.handle }}</p>
-      <p class="mt-2 text-sm">{{ profile.bio }}</p>
-      <div class="flex space-x-4 mt-2 text-sm text-gray-500">
-        <span><i class="fa-solid fa-map-marker-alt px-2"></i>{{ profile.location }}</span>
-        <span><i class="fa-brands fa-github px-2"></i><a href="https://github.com/Vanhuyne" class="cursor-pointer text-blue-600" target="_blank">{{ profile.website.slice(0,15) }}...</a></span>
-        <span><i class="fa-brands fa-linkedin px-2"></i><a href="https://www.linkedin.com/in/v%C4%83n-huy-0845161a1/" class="cursor-pointer text-blue-600" target="_blank">{{ "https://www.linkedin.com/in/v%C4%83n-huy-0845161a1/".slice(0,15) }}...</a></span>
-        <span><i class="fa-solid fa-calendar-days px-2"></i>Joined {{ profile.joined }}</span>
-      </div>
-    </div>
-    <!-- following and follower -->
-    <div class="flex space-x-4 mt-4 text-sm text-gray-500">
-      <span><strong class="px-1 text-sm text-black">{{ profile.following }}</strong>Following</span>
-      <span><strong class="px-1 text-sm text-black">{{ profile.followers }}</strong>Follower</span>
+  <div class="pt-16">
+    <h1 class="font-bold flex items-center text-sm ">
+      {{ profile.name }}
+      <img src="assets/img-icons/tick-mark.png" alt="Verified" class="ml-2 w-4 h-4" />
+    </h1>
+    <p class="text-sm text-gray-500 mt-2">{{ profile.handle }}</p>
+    <p class="mt-2 text-sm">{{ profile.bio }}</p>
+    <div class="flex space-x-4 mt-2 text-sm text-gray-500">
+      <span><i class="fa-solid fa-map-marker-alt px-2"></i>{{ profile.location }}</span>
+      <span><i class="fa-brands fa-github px-2"></i><a href="https://github.com/Vanhuyne" class="cursor-pointer text-blue-600" target="_blank">{{ profile.website.slice(0,15) }}...</a></span>
+      <span><i class="fa-brands fa-linkedin px-2"></i><a href="https://www.linkedin.com/in/v%C4%83n-huy-0845161a1/" class="cursor-pointer text-blue-600" target="_blank">{{ "https://www.linkedin.com/in/v%C4%83n-huy-0845161a1/".slice(0,15) }}...</a></span>
+      <span><i class="fa-solid fa-calendar-days px-2"></i>Joined {{ profile.joined }}</span>
     </div>
   </div>
+  <!-- following and follower -->
+  <div class="flex space-x-4 mt-4 text-sm text-gray-500">
+    <span><strong class="px-1 text-sm text-black">{{ profile.following }}</strong>Following</span>
+    <span><strong class="px-1 text-sm text-black">{{ profile.followers }}</strong>Follower</span>
+  </div>
+</div>
 
-  <!-- section tweets -->
-  <div class="mt-6">
-    <div class="grid grid-cols-4 gap-4 justify-around border-b border-gray-700 text-sm">
-      <button class="text-gray-600 hover:bg-gray-300 py-2 px-4" [class.active]="activeTab === 'Post'" (click)="setActiveTab('Post')">Post</button>
-      <button class="text-gray-600 hover:bg-gray-300 py-2 px-4" [class.active]="activeTab === 'Replies'" (click)="setActiveTab('Replies')">Replies</button>
-      <button class="text-gray-600 hover:bg-gray-300 py-2 px-4" [class.active]="activeTab === 'Highlights'" (click)="setActiveTab('Highlights')">Highlights</button>
-      <button class="text-gray-600 hover:bg-gray-300 py-2 px-4" [class.active]="activeTab === 'Media'" (click)="setActiveTab('Media')">Media</button>
-    </div>
+<!-- section tweets -->
+<div class="mt-6">
+  <div class="grid grid-cols-4 gap-4 justify-around border-b border-gray-700 text-sm">
+    <button class="text-gray-600 hover:bg-gray-300 py-2 px-4" [class.active]="activeTab === 'Post'" (click)="setActiveTab('Post')">Post</button>
+    <button class="text-gray-600 hover:bg-gray-300 py-2 px-4" [class.active]="activeTab === 'Replies'" (click)="setActiveTab('Replies')">Replies</button>
+    <button class="text-gray-600 hover:bg-gray-300 py-2 px-4" [class.active]="activeTab === 'Highlights'" (click)="setActiveTab('Highlights')">Highlights</button>
+    <button class="text-gray-600 hover:bg-gray-300 py-2 px-4" [class.active]="activeTab === 'Media'" (click)="setActiveTab('Media')">Media</button>
+  </div>
 
-    <!-- Display tweets -->
-    <div *ngFor="let tweet of profile.tweets" class="px-6 border-b border-gray-700 p-4">
-      <div class="flex items-center justify-between">
-        <div class="flex items-center">
-          <img [src]="profile.profileImage" class="w-10 h-10 object-cover rounded-full mr-2" alt="Avatar" />
-          <div class="flex items-center text-sm">
-            <p class="font-bold mr-2">{{ profile.name }}</p>
-            <p class="text-sm text-gray-500 mr-2">{{ profile.handle }}</p>
-            <span class="text-sm text-gray-500">{{ tweet.timestamp }}</span>
-          </div>
-        </div>
-        <button class="text-gray-500 hover:text-black">
-          <i class="fa-solid fa-ellipsis"></i>
-        </button>
-      </div>
-      <div class="ml-12 text-sm ">
-        <p>{{ tweet.text }}</p>
-        <div style="width: 550px; height: 300px; padding-top: 10px;">
-          <iframe [src]="tweet.gif" style="width: 100%; height: 100%; border: none;"></iframe>
-      </div> 
-        <div class="grid grid-cols-5 text-gray-500 mt-4 gap-4">
-          <button class="flex items-center space-x-1 ">
-        <i class="fa-regular fa-comment"></i><span>{{tweet.comments}}</span>
-          </button>
-          <button class="flex items-center space-x-1 ">
-        <i class="fa-solid fa-retweet"></i><span>{{tweet.retweets}}</span>
-          </button>
-          <button class="flex items-center space-x-1 ">
-        <i class="fa-regular fa-heart"></i><span>{{tweet.likes}}</span>
-          </button>
-          <button class="flex items-center space-x-1 ">
-        <i class="fa-solid fa-chart-simple"></i><span>{{tweet.views}}</span>
-          </button>
-          <button class="flex items-center space-x-1 ">
-        <i class="fa-regular fa-bookmark"></i><span>{{tweet.bookmarks}}</span>
-          </button>
+  <!-- Display tweets -->
+  <div *ngFor="let tweet of profile.tweets" class="px-6  p-4">
+    <div class="flex items-center justify-between">
+      <div class="flex items-center">
+        <img [src]="profile.profileImage" class="w-10 h-10 object-cover rounded-full mr-2" alt="Avatar" />
+        <div class="flex items-center text-sm">
+          <p class="font-bold mr-2">{{ profile.name }}</p>
+          <p class="text-sm text-gray-500 mr-2">{{ profile.handle }}</p>
+          <span class="text-sm text-gray-500">{{ tweet.timestamp }}</span>
         </div>
       </div>
+      <button class="text-gray-500 hover:text-black">
+        <i class="fa-solid fa-ellipsis"></i>
+      </button>
+    </div>
+    <div class="ml-12 text-sm ">
+      <p class="whitespace-pre-line">{{ tweet.text }}</p>
+      <!-- <div style="width: 550px; height: 300px; padding-top: 10px;">
+        <iframe [src]="tweet.gif" style="width: 100%; height: 100%; border: none;"></iframe>
+    </div>  -->
+      <div class="grid grid-cols-5 text-gray-500 mt-4 gap-4">
+        <button class="flex items-center space-x-1 ">
+      <i class="fa-regular fa-comment"></i><span>{{tweet.comments}}</span>
+        </button>
+        <button class="flex items-center space-x-1 ">
+      <i class="fa-solid fa-retweet"></i><span>{{tweet.retweets}}</span>
+        </button>
+        <button class="flex items-center space-x-1 ">
+      <i class="fa-regular fa-heart"></i><span>{{tweet.likes}}</span>
+        </button>
+        <button class="flex items-center space-x-1 ">
+      <i class="fa-solid fa-chart-simple"></i><span>{{tweet.views}}</span>
+        </button>
+        <button class="flex items-center space-x-1 ">
+      <i class="fa-regular fa-bookmark"></i><span>{{tweet.bookmarks}}</span>
+        </button>
+      </div>
     </div>
   </div>
-
+</div>
+</div>
